# rust_serialisation_speed_test

./: .gitignore  Cargo.toml  README.md
src/: main.rs
