[package]
name = "speedtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
bincode = "1.3.3"
serde = { version = "1.0.152", features=["derive"] }
smallvec = { version = "1.10.0", features=["serde"] }
